<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--
        wrap_content -> o elemento ocupa o espaço
        necessário para que ele fique posicionado
        na tela
    -->
    <Button
        android:id="@+id/btn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clique_para_jogar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/segundo_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_1"
        app:layout_constraintEnd_toStartOf="@id/btn_3"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terceiro_botao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_2"
        app:layout_constraintStart_toEndOf="@id/btn_2" />

    <TextView
        android:id="@+id/txt_texto_teste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum_simplesmente_uma_simula_o_de_texto_da_ind_stria_tipogr_fica_e_de_impressos_e_vem_sendo_utilizado_desde_o_s_culo_xvi_quando_um_impressor_desconhecido_pegou_uma_bandeja_de_tipos_e_os_embaralhou_para_fazer_um_livro_de_modelos_de_tipos_lorem_ipsum_sobreviveu_n_o_s_a_cinco_s_culos_como_tamb_m_ao_salto_para_a_editora_o_eletr_nica_permanecendo_essencialmente_inalterado_se_popularizou_na_d_cada_de_60_quando_a_letraset_lan_ou_decalques_contendo_passagens_de_lorem_ipsum_e_mais_recentemente_quando_passou_a_ser_integrado_a_softwares_de_editora_o_eletr_nica_como_aldus_pagemaker"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="20dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_3" />

    <!--
        android:drawableEnd="@drawable/ic_teste" -> define
        um ícone no final do botão
        android:drawableLeft="@drawable/ic_teste" -> define um
        ícone no lado esquerdo do botão
        android:drawableBottom="@drawable/ic_teste" -> define um
        ícone na parte de baixo do botão
        android:drawableTop="@drawable/ic_teste" -> define
        um ícone na parte de cima do botão
    -->
    <Button
        android:id="@+id/btn_teste_texto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        android:text="@string/teste"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"
        android:textColor="@color/white"
        android:backgroundTint="@color/vermelho"
        android:drawableTop="@drawable/ic_teste" />

    <ImageView
        android:id="@+id/img_teste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_teste"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_texto_teste" />

</androidx.constraintlayout.widget.ConstraintLayout>